* style: fixed whitespace nowrap of company/person title in contact details

--- a/asset/css/ext.css
+++ b/asset/css/ext.css
@@ -280,6 +280,10 @@ div.visitingCardContent table tr td.label {
 	width:100%;
 }
 
+#contact-details h1 {
+	white-space:normal;
+}
+
 #contact-details h3 {
 	margin-bottom:5px;
 }
